<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>

    <string name="newparticipant_hint">Who?</string>
    <string name="newevent_hint">Event name?</string>

    <string name="newparticipant_button">ADD PARTICIPANT</string>
    <string name="newevent_button">ADD EVENT</string>
    <string name="register_button">REGISTER</string>

    <string name="newevent_date_first">01-01-2016</string>
    <string name="newevent_starttime_first">10:00</string>
    <string name="newevent_endtime_first">08:00</string>

    <string name="newevent_date_label">Date?</string>
    <string name="newevent_starttime_label">Start Time?</string>
    <string name="newevent_endtime_label">Start Time?</string>
    <string name="participantspinner_label">Partcipant?</string>
    <string name="eventspinner_label">Event?</string>
    <string name="Spinner_label"> </string>


    <string-array name="Paraticipants">

        <item>Abdullah</item>
        <item>Sumbal</item>
    </string-array>
</resources>
