<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.eventregistration.MainActivity"
    tools:showIn="@layout/activity_main">



    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <!-- registration section section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@id/linearLayout">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participantspinner_label"
                    android:layout_gravity="left"/>



                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"

                    android:id="@+id/participantspinner"
                    />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventspinner_label"
                    android:layout_gravity="left"
                    android:id="@+id/eventspinner"/>


                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"

                    android:id="@+id/spinnerforevents"
                    />


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"
                android:layout_gravity="end"
                android:onClick="register"/>

            <View
                android:layout_height="2dp"
                android:layout_width="fill_parent"
                android:background="#1E90FF"/>

        </LinearLayout>

        <!-- Adding participant section -->
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newparticpant_name"
            android:hint="@string/newparticipant_hint"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newparticipant_button"
            android:layout_gravity="end"
            android:onClick="addparticipant"/>

        <View
            android:layout_height="2dp"
            android:layout_width="fill_parent"
            android:background="#1E90FF"/>

        <!-- Adding event section -->

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newevent_name"
            android:hint="@string/newevent_hint"/>

        <LinearLayout
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_date_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newevent_date_first"
                android:id="@+id/newevent_date"
                android:onClick="showDatePickerDialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_starttime_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newevent_starttime_first"
                android:id="@+id/starttime"
                android:onClick="showTimePickerDialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/newevent_endtime_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newevent_endtime_first"
                android:id="@+id/endtime"
                android:onClick="showTimePickerDialog"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newevent_button"
            android:layout_gravity="end"
            android:onClick="addevent"/>


    </LinearLayout>



</RelativeLayout>
